@@ -12,7 +12,12 @@ x old cppunits are recognized, but don't compile
     (cppunit/extensions/HelperMacros.h does not exist) - fix the test in 
     configure.in
 
-o logo!!
+x win32 monster.sh: does not [FAIL] if test throws an assertion
+    (test with ./test --inmemorydb=1 --reopen=1 or sth similar)
+
+x unit-tests for cursor.c (as described in tdd.txt)
+
+x unit-tests for util.c (as described in tdd.txt)
 
 o create a webpage
     x contents are missing
@@ -22,30 +27,22 @@ o create a webpage
         x also add docs about installation, compilation, porting
         x download as pdf
         x don't forget to add it to Makefile.am/EXTRA_DIST
-    o news
+    x news
+        x sidebar!
+    x move to a subversion repository!
     o ask someone to correct my english
     o ask someone (Stephan?) to review the "impressum"
-    o move to subversion repository!
+
+o logo!!
 
 -----------------------------------------------------
 -----------------------------------------------------
-
-x win32 monster.sh: does not [FAIL] if test throws an assertion
-    (test with ./test --inmemorydb=1 --reopen=1 or sth similar)
-
-o port to big-endian
-    still a bug on big-endian: ./test 1/130.tst --overwrite=1 --pagesize=8192
-    o test with valgrind
-    o switch default endian to big endian - does it work on my local machine?
 
 o fix a small valgrind bug
-    valgrind --tool=memcheck --leak-check=full --show-reachable=yes 
-        .libs/lt-test --file ../../testfiles/1/ext_060.tst 
-        --inmemorydb=1 --verbose=1
+    valgrind --tool=memcheck --leak-check=full --show-reachable=yes ./test --file ../../testfiles/2/ext_060.tst --inmemorydb=1
     ==26699== 53 bytes in 1 blocks are definitely lost in loss record 1 of 1
     ==26699==    at 0x4A1EAC6: malloc (vg_replace_malloc.c:149)
-    ==26699==    by 0x407745: _ham_mem_malloc (mem.c:25)
-    ==26699==    by 0x40A92E: blob_allocate (blob.c:191)
+    ==26699==    by 0x40A92E: blob_allocate (blob.c:188)
     ==26699==    by 0x4135BF: key_insert_extended (keys.c:67)
     ==26699==    by 0x40E46B: my_insert_nosplit (btree_insert.c:520)
     ==26699==    by 0x40DD81: my_insert_in_page (btree_insert.c:274)
@@ -56,9 +53,15 @@ o fix a small valgrind bug
     ==26699==    by 0x403717: my_execute (test.c:1168)
     ==26699==    by 0x4041FC: main (test.c:1855)
 
-    tests/src/ext_060.tst: wenn das allerletzte erase drin ist, gibt's ein 
-    leak. wenn nicht, gibt's keins.
-    endet in btree_erase.c:1040 - wenn in einer internen page ein key 
-    gelöscht wird, wird der record nicht gelöscht
+o simple concurrency between processe
+    o test 1 writer, multiple reader scenarios
+    o test no writer, multiple reader scenarios
+    o write documentation (tutorial, faq)
 
-o test 1 writer, multiple reader scenarios
+o port to big-endian
+    still a bug on big-endian: ./test 1/130.tst --overwrite=1 --pagesize=8192
+    o test with valgrind
+    o switch default endian to big endian - does it work on my local machine?
+
+o fix doxygen tags (see mail)
+
